# mcp-course-maker

./: .gitignore  README.md  mcp.json.example  使用手册.md  紫外可见光分光光度计实验_v1.0_20250128.xlsx
.cursor/rules/: 3dmodeling.mdc  course_creation_master.mdc  excel-prompt.mdc  excel_prompt.mdc  mesh_decimation.mdc  modeling_flow.mdc  pictures_rating.mdc  polyhaven_search.mdc  posset.mdc  saving_directory.mdc  skybox_generate.mdc  text_image_generate_model_rules.mdc  timeline-prompt.mdc  timeline.mdc  tts.mdc
Assets/: test_complex_timeline_generation.py  timeline.mdc  timeline_generation_examples.md
Assets/Materials/: Glass_Material.mat  Iron_Material.mat  MaterialPBRRadial.mat  Water_Material.mat
Assets/ModelParameterLib/: GLB转换工具使用说明.md  ModelComplexityDatabase.json  ModelScaleDatabase.json  QUICKSTART.md  README.md  USAGE_GUIDE.md  convert_scale_lib.py  复杂度数据库使用说明.md  比例库使用说明.md
Assets/ModelParameterLib/Core/: AutoPlacer.cs
Assets/ModelParameterLib/Data/: AIPlacementData.cs  AIPlacementLog.cs  ConversionStats.cs  GLBFileInfo.cs  (+3 more)
Assets/Prefabs/: Auto Hand Player Container.prefab  Basketball dispenser.prefab  Capsule.prefab  Connection.prefab  HandTriggerArea.prefab  Line.mat  My Auto Hand Player Container.prefab  Stuff.prefab  Unity UI Canvas (1).prefab  可抓取示例.prefab  采血.prefab
Assets/Resources/: PicoSdkPCConfig.json  Test.asset
Assets/Scenes/: DemoScene 1.unity  MainStageOffline.unity  MainStageRoom.unity  New Scene.unity  Test.unity  TimelineTest.unity  实验场景1.unity
Assets/Scripts/: AudioController.cs  BallController.cs  BlackScreen.cs  BlockBallGameManager.cs  BlockController.cs  ButtonsManager.cs  CameraLookAt.cs  FrameClock.cs  GameSetup.cs  HandUIController.cs  InteractOBJManager.cs  LoadScreen.cs  LogManager.cs  LogStr.cs  MainUIController.cs  MoveCMR.cs  MyAudio.cs  RenderVSTest.cs  SetDebugUI.cs  SetPosition.cs  ShowFPS.cs  TestBall.cs  UICatchInstance.cs  VideoController.cs
Assets/Settings/: URP-HighFidelity-Renderer.asset  URP-HighFidelity.asset
Assets/Shader/: GlassUnlit.shader  MaterialPBRLateral.shader  MaterialPBRRadial.shader  New Amplify Shader.shader  New Shader Graph.shadergraph  WaterUnlit.shader
Assets/Timeline/: CameraAroundCube1.playable  CameraAroundCube1_AnimClip.anim  CameraMovementToSixth1.playable  CameraMovementToSixth1_AnimClip.anim  丢弃棉球_镜头.playable  丢弃棉球_镜头_AnimClip.anim  介绍实验_物品.playable  介绍实验_物品_AnimClip.anim  介绍实验_镜头 1.playable  介绍实验_镜头 1_AnimClip.anim  介绍实验_镜头 2.playable  介绍实验_镜头 2_AnimClip.anim  介绍实验_镜头.playable  介绍实验_镜头_AnimClip.anim  佩戴手套_动作.playable  佩戴手套_动作_AnimClip.anim  佩戴手套_镜头.playable  佩戴手套_镜头_AnimClip.anim  佩戴手套综合.playable  倒掉比色皿1溶液_镜头.playable  倒掉比色皿1溶液_镜头_AnimClip.anim  倒掉比色皿2溶液_镜头.playable  倒掉比色皿2溶液_镜头_AnimClip.anim  关闭样品室2_镜头.playable  关闭样品室2_镜头_AnimClip.anim  关闭样品室_镜头.playable  关闭样品室_镜头_AnimClip.anim  关闭电源_镜头.playable  关闭电源_镜头_AnimClip.anim  再次打开样品室_镜头.playable  再次打开样品室_镜头_AnimClip.anim  再次拉动样品杆_镜头.playable  再次拉动样品杆_镜头_AnimClip.anim  吸光度按钮_按下.playable  吸光度按钮_按下_AnimClip.anim  完成实验综合.playable  实验结束_物体.playable  实验结束_物体_AnimClip.anim  实验结束_镜头.playable  实验结束_镜头_AnimClip.anim  (+136 more)
Assets/excel-mcp-server/: pyproject.toml
Assets/total_test/: test.unity  test_experiment.xlsx  紫外可见光光度计测量实验.asset
Assets/unitymcp/: HOW_TO_ADD_A_TOOL.md  README.md  package.json  给UnityMCP添加Tool.md
Assets/测试/: Example.xlsx  test.unity  测试.asset
Assets/测量物体加速度/: 测量物体加速度.xlsx
Assets/紫外可见光光度计测量实验/: test.unity  测量溶液pH值实验.xlsx  紫外可见光光度计测量实验.asset  紫外可见光光度计测量实验.unity  紫外可见光光度计测量实验.xlsx
Assets/红绿色盲测试/: 红绿色盲测试.asset  红绿色盲测试.unity  红绿色盲测试.xlsx
HDR_EXR_KTX2_Viewer/: README.md  hdr-exr-ktx2-viewer-0.0.1.vsix  package-lock.json  package.json  rollup.config.js
HDR_EXR_KTX2_Viewer/src/: extension.ts  server.js
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
Skybox_Viewer/: README.md  package.json  skybox-viewer-0.0.2.vsix  tsconfig.json
Skybox_Viewer/src/: extension.ts  server.js
baidu-image-recognition-mcp/: .env  QUICKSTART.md  README.md  example.py  install.py  pyproject.toml  requirements.txt  server.py
baidu-image-recognition-mcp/baidu_mcp/: server.py
doubao-tts-mcp/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  音色列表.xlsx
doubao-tts-mcp/tests/: test_server.py  test_volc_tts.py
doubao-tts-mcp/volcengine_mcp/: __init__.py  config.py  server.py  volc_tts.py
elevenlabs-mcp/: pyproject.toml  requirements.txt
elevenlabs-mcp/elevenlabs_mcp/: server.py
file-simp-server/: mcp.json.example  pyproject.toml  server.py
file-simp-server/file_mcp/: server.py
image-gen-server-main/: Dockerfile  pyproject.toml  requirements.txt  server.py  smithery.yaml
image-gen-server-main/jimeng_mcp/: __init__.py  server.py
instant-meshes-mcp/: .gitignore  README.md  requirements.txt  setup.py
instant-meshes-mcp/mesh_dec/: __init__.py  config.py  mcp.json.example  server.py
meshy-ai-mcp-server/: pyproject.toml
meshy-ai-mcp-server/meshy_mcp/: server.py
meshy-ai-mcp-server/src/: server.py
picui-image-upload-mcp/: README.md  pyproject.toml
picui-image-upload-mcp/picui_mcp/: __init__.py  server.py
polyhaven-mcp-server/: LICENSE  README.md  pyproject.toml
polyhaven-mcp-server/polyhaven_mcp/: server.py
polyhaven-mcp-server/src/: server.py
realesrgan-mcp/: mcp_realesrgan_server.py  pyproject.toml
realesrgan-mcp/realesrgan_mcp/: server.py
tripo-mcp/: mcp.json.example  pyproject.toml
tripo-mcp/src/: main.py  tripo_api.py
tripo-mcp/tripo_mcp/: main.py  models.py  tripo_api.py
使用手册测试生成结果/: PlayerController.cs  紫外可见光光度计测量实验.xlsx
使用手册测试生成结果/小狗_1_simplify_20250709_104735/: info.json
(+808 files in other folders)
